- GFilename::path()
- GFilename::file()
- GCsv::append()
- GSkyMap::shape()
- GSkyMap::ndim()
- GModelSky::spatial()
- GModelSky::spectral()
- GModelSky::temporal()
- GCTAObservation(GFilename) constructor
- GCTAResponseTable::axis(std::string)
- GCTAResponseTable::table(std::string)
- GCTAResponseTable::has_axis(std::string)
- GCTAResponseTable::has_table(std::string)
- GCTAEventCube::weights()
- friend GTime  operator+(const GTime&  time,    const double& seconds)
- friend GTime  operator+(const double& seconds, const GTime&  time)
- friend GTime  operator-(const GTime&  time,    const double& seconds)
- friend double operator-(const GTime&  a,       const GTime&  b)
- GTime::operator+=(const double& seconds)
- GTime::operator-=(const double& seconds)
- friend double operator/(const GEnergy& a, const GEnergy& b);

The following methods have been removed:
- GFilename::size()
- gammalib::file_exists()
- gammalib::file_exists_gzip()
- gammalib::is_fits()
- GTime::operator+=(const GTime& time)
- GTime::operator-=(const GTime& time)
- GTime::operator*=(const double& scale)
- GTime::operator/=(const double& scale)
- friend GTime operator+(const GTime &a, const GTime &b)
- friend GTime operator-(const GTime &a, const GTime &b)
- friend GTime operator* (const GTime &time, const double &s)
- friend GTime operator*(const double &s, const GTime &time)
- friend GTime operator*(const GTime &time, const double &s)
- friend GTime operator/(const GTime &time, const double &s)
- GCTACubeExposure::elogmeans()
- GCTACubePsf::elogmeans()
- GCTACubeBackground::elogmeans()

The following methods have been renamed:
- GCTAResponseTable::tables(), was GCTAResponseTable::size()
- GCTAResponseTable::axis_bins(), was GCTAResponseTable::axis()
- GFilename::is_empty(), was GFilename::empty()
- GFilename::url(), was GFilename::filename()
- GCTAEventCube::counts(), was GCTAEventCube::map()

The following classes now use GFilename for filenames arguments instead
of std::string:
- GApplicationPar